# invest-system

./: .env.example  .gitignore  AGENTS.md  README.md  backtest.py  batch_download_all.py  config.py  daily_report.py  intelligence.py  main.py  optimizer.py  pyproject.toml  requirements.txt  tg_monitor.py  threads_monitor.py  webapp.py  x_monitor.py
data/: fetcher.py  finmind.py
db/: store.py
openspec/changes/archive/2026-03-24-add-testing-framework/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-24-add-testing-framework/specs/data-parsing-tests/: spec.md
openspec/changes/archive/2026-03-24-add-testing-framework/specs/database-storage/: spec.md
openspec/changes/archive/2026-03-24-add-testing-framework/specs/strategy-unit-tests/: spec.md
openspec/specs/db-unit-tests/: spec.md
openspec/specs/testing-infrastructure/: spec.md
src/invest_system/: backtest.py  batch_download_all.py  config.py  daily_report.py  intelligence.py  main.py  optimizer.py  tg_monitor.py  threads_monitor.py  trading.html  webapp.py  x_monitor.py
src/invest_system/data/: fetcher.py  finmind.py
src/invest_system/db/: store.py  trades.db
src/invest_system/strategies/: __init__.py  bollinger.py  breakout.py  ensemble.py  ma_cross.py  macd.py  rsi.py
strategies/: __init__.py  base.py  bollinger.py  breakout.py  ensemble.py  ma_cross.py  macd.py  rsi.py
tests/: conftest.py  test_db.py  test_fetcher.py  test_finmind.py  test_strategies.py  test_webapp.py
